--- a/src/ListenTogether/Pages/SettingsPage.xaml
+++ b/src/ListenTogether/Pages/SettingsPage.xaml
@@ -112,21 +112,21 @@
                     <!--其它模块-->
                     <StackLayout Margin="0,20,0,0">
                         <Button Text="日志管理"
-                            Margin="0,0,0,5"
-                            Command="{Binding GoToLogCommand}"/>
+                                Command="{Binding GoToLogCommand}"/>
                         <Button Text="歌曲缓存"
-                            Command="{Binding GoToCacheCleanCommand}"/>
-                        <Button Text="退出账号" 
-                            Margin="0,10,0,0"
-                            IsVisible="{Binding UserInfo, Converter={StaticResource IsNotEqualConverter}}"
-                            IsEnabled="{Binding IsNotBusy}"
-                            Command="{Binding LogoutCommand}"/>
+                                Margin="0,5,0,0"
+                                Command="{Binding GoToCacheCleanCommand}"/>
+                        <Button Text="退出账号"
+                                Margin="0,5,0,0"
+                                IsVisible="{Binding UserInfo, Converter={StaticResource IsNotEqualConverter}}"
+                                IsEnabled="{Binding IsNotBusy}"
+                                Command="{Binding LogoutCommand}"/>
                         <BoxView Margin="0,10,0,10"
-                             HeightRequest="1"/>
+                                 HeightRequest="1"/>
 
                         <!-- 关于 -->
                         <StackLayout>
-                            <Label Text="在线音乐助手" TextColor="#FFFFFF" FontSize="18" HorizontalOptions="CenterAndExpand"/>
+                            <Label Text="一起听" TextColor="#FFFFFF" FontSize="18" HorizontalOptions="CenterAndExpand"/>
                             <Label Text="{Binding VersionName, StringFormat='{}版本：{0}'}" TextColor="#FFFFFF" FontSize="14" HorizontalOptions="CenterAndExpand"/>
 
                             <Label Text="本软件基于GPL-3.0协议，开源、免费" TextColor="#727272" FontSize="14" HorizontalOptions="CenterAndExpand" Margin="0,10,0,0"/>
