1、优化搜索建议的逻辑。2、优化歌词滚动的逻辑。

--- a/src/ListenTogether/Pages/PlayingPage.xaml
+++ b/src/ListenTogether/Pages/PlayingPage.xaml
@@ -94,7 +94,8 @@
                                     EmptyView="暂无歌词"
                                     ItemsSource="{Binding Lyrics}"
                                     HorizontalOptions="Center"
-                                    SelectionMode="None">
+                                    SelectionMode="None"
+                                    Scrolled="ListLyrics_Scrolled">
                 <CollectionView.ItemTemplate>
                     <DataTemplate>
                         <StackLayout HorizontalOptions="Center">
