--- a/src/ListenTogether/Pages/MyFavoritePage.xaml
+++ b/src/ListenTogether/Pages/MyFavoritePage.xaml
@@ -36,7 +36,7 @@
                                VerticalOptions="CenterAndExpand"/>
             <StackLayout Margin="20,0,0,0"
                          Orientation="Horizontal"
-                         HorizontalOptions="Start"
+                         HorizontalOptions="{OnPlatform UWP=Start,MacCatalyst=Start,Android=EndAndExpand,iOS=EndAndExpand}"
                          VerticalOptions="End">
                 <StackLayout.GestureRecognizers>
                     <TapGestureRecognizer Command="{Binding MyFavoriteAddCommand}"/>
@@ -46,6 +46,7 @@
                        WidthRequest="20">
                 </Image>
                 <Label Text="新建歌单"
+                       IsVisible="{OnPlatform UWP=True,MacCatalyst=True,Android=False,iOS=False}"
                        VerticalTextAlignment="Center"/>
             </StackLayout>
         </StackLayout>
@@ -105,7 +106,7 @@
                 </DataTemplate>
             </CollectionView.ItemTemplate>
         </CollectionView>
-        
+
         <controls:Player x:Name="player"
                          Margin="0,20,0,0"
                          VerticalOptions="End"
